--- a/styles/styles.css
+++ b/styles/styles.css
@@ -324,10 +324,18 @@ body {
 
 /* Filter */
 
+.catalog-filter {
+    margin-bottom: 44px;
+}
+
 .catalog-filter-row {
     display: flex;
     flex-wrap: wrap;
     align-items: flex-end;
+}
+
+.catalog-filter-row:not(:last-child) {
+    margin-bottom: 16px;
 }
 
 .filter-ruleset {
@@ -343,14 +351,6 @@ body {
 
     font-size: 14px;
     line-height: 20px;
-}
-
-.catalog-filter-list {
-    display: flex;
-    margin: 0;
-    padding: 0;
-
-    list-style-type: none;
 }
 
 .catalog-sort-select {
@@ -376,16 +376,13 @@ body {
 /* Range slider */
 
 .range-filter-container {
-    padding: 18px 16px;
+    padding: 17px 16px;
+    width: 196px;
 
     background-color: rgba(252, 252, 252, .3);
     border-radius: 20px;
-}
 
-.range-filter {
-    width: 164px;
-    margin: 0;
-    padding: 0;
+    box-sizing: border-box;
 }
 
 .range-filter-scale {
@@ -394,7 +391,7 @@ body {
     width: 100%;
     height: 2px;
 
-    background-color: #dcdcdc;
+    background-color: rgba(86, 92, 102, .3);
 }
 
 .range-filter-bar {
@@ -402,7 +399,7 @@ body {
 
     height: 2px;
 
-    background-color: #000000;
+    background-color: #2d3440;
 }
 
 .range-filter-toggle {
@@ -417,21 +414,124 @@ body {
     background-color: #fcfcfc;
     /* background-clip: padding-box; */
     border-radius: 50%;
-    border: 6px #000000 solid;
+    border: 6px #2d3440 solid;
 
     cursor: pointer;
 
 }
 
 .range-filter-toggle-min {
-    top: -8px;
-    left: -9px;
+    top: -7px;
+    left: -8px;
 }
 
 .range-filter-toggle-max {
-    top: -8px;
-    right: -9px;
+    top: -7px;
+    right: -8px;
 }
+
+/* Radio/Checkbox controls */
+
+.catalog-filter-list {
+    display: flex;
+    margin: 0;
+    padding: 8px 24px;
+
+    font-size: 14px;
+    line-height: 20px;
+
+    background-color: rgba(252, 252, 252, .3);
+    border-radius: 20px;
+    list-style-type: none;
+}
+
+.catalog-filter-item {
+    margin-right: 16px;
+}
+
+
+.catalog-filter-control {
+    position: relative;
+
+    padding-left: 24px;
+
+    cursor: pointer;
+}
+
+/* .catalog-filter-control:hover {
+    opacity: .6;
+}
+
+.catalog-filter-control:active {
+    opacity: .3;
+}
+
+.catalog-filter-control:disabled {
+    opacity: .1;
+} */
+
+.control-mark-checkbox {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+
+    width: 16px;
+    height: 16px;
+
+    border: 1px #2d3440 solid;
+    border-radius: 3px;
+
+    box-sizing: border-box;
+}
+
+/* .filter-checkbox input[type="checkbox"]:focus + .control-mark-checkbox {
+    outline: 2px #af4fff solid;
+    outline-offset: 2px;
+} */
+
+.filter-checkbox input[type="checkbox"]:checked + .control-mark-checkbox {
+    background-image: url("../images/tick.svg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    /* border-color: #2d3440; */
+}
+
+.control-mark-radio {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+
+    width: 16px;
+    height: 16px;
+
+    border: 1px #2d3440 solid;
+    border-radius: 50%;
+
+    box-sizing: border-box;
+}
+
+/* .filter-radio input[type="radio"]:focus + .control-mark-radio {
+    outline: 2px #af4fff solid;
+    outline-offset: 2px;
+} */
+
+.filter-radio input[type="radio"]:checked + .control-mark-radio::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 6px;
+    height: 6px;
+
+    background-color: #2d3440;
+    border-radius: 50%;
+
+    content: "";
+}
+
 
 /* Slider */
 
