--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,6 +105,7 @@ body {
 .btn {
     display: inline-block;
 
+    font-family: 'Inter', sans-serif;
     font-size: 16px;
     line-height: 20px;
     font-weight: 700;
@@ -118,10 +119,83 @@ body {
     padding: 12px 32px;
 
     border-radius: 26px;
-    background-color: #ffffff;
+    background-color: #fcfcfc;
     border: 4px rgba(252, 252, 252, .4) solid;
     background-clip: padding-box;
 }
+
+.btn-basic:hover {
+    background-color: rgba(252, 252, 252, .4);
+    border: 4px #fcfcfc solid;
+}
+
+.btn-basic:active {
+    background-color: #fcfcfc;
+    border: 2px #2d3440 solid;
+    padding: 14px 34px;
+}
+
+.btn-basic:focus:not(:active) {
+    background-color: rgba(252, 252, 252, .5);
+    border: 2px #2d3440 solid;
+    padding: 14px 34px;
+    outline: none;
+}
+
+.btn-basic:disabled {
+    color: #b9b9b9;
+    font-weight: 400;
+
+    background-color: #e7e7e7;
+    outline: none;
+
+    cursor: no-drop;
+}
+
+.btn-basic-loading {
+    padding-right: 56px;
+    position: relative;
+}
+
+.btn-basic-loading:active {
+    padding-right: 58px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+}
+
+.btn-basic-loading:focus:not(:active) {
+    padding-right: 58px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+}
+
+.btn-basic-loading::after {
+    position: absolute;
+    right: 32px;
+    top: 14px;
+
+    width: 17px;
+    height: 16px;
+
+    background-image: url(../images/spinner.svg);
+
+    animation-name: loading;
+    animation-duration: .7s;
+    animation-fill-mode: both;
+    animation-iteration-count: infinite;
+
+    content: '';
+}
+
+.btn-basic-loading:active::after {
+    top: 16px;
+}
+
+.btn-basic-loading:focus:not(:active)::after {
+    top: 16px;
+}
+
+
 
 .btn-secondary {
     padding: 12px 32px;
@@ -134,6 +208,81 @@ body {
     background-clip: padding-box;
 }
 
+.btn-secondary:hover {
+    background-color: rgba(252, 252, 252, .3);
+    border: 4px #ff2f64 solid;
+    color: #2d3440;
+}
+
+.btn-secondary:active {
+    background-color: #feafc3;
+    border: 2px #2d3440 solid;
+    padding: 14px 34px;
+}
+
+.btn-secondary:focus:not(:active) {
+    background-color: #ff2f64;
+    border: 2px #2d3440 solid;
+    padding: 14px 34px;
+    outline: none;
+}
+
+.btn-secondary:disabled {
+    color: #2d3440;
+    font-weight: 400;
+
+    background-color: #b9b9b9;
+    border: 4px rgba(185, 185, 185, .3) solid;
+    outline: none;
+
+    cursor: no-drop;
+}
+
+.btn-secondary-loading {
+    padding-right: 56px;
+    position: relative;
+}
+
+.btn-secondary-loading:active {
+    padding-right: 58px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+}
+
+.btn-secondary-loading:focus:not(:active) {
+    padding-right: 58px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+}
+
+.btn-secondary-loading::after {
+    position: absolute;
+    right: 32px;
+    top: 14px;
+
+    width: 17px;
+    height: 16px;
+
+    background-image: url(../images/spinner-white.svg);
+
+    animation-name: loading;
+    animation-duration: .7s;
+    animation-fill-mode: both;
+    animation-iteration-count: infinite;
+
+    content: '';
+}
+
+.btn-secondary-loading:active::after {
+    top: 16px;
+}
+
+.btn-secondary-loading:focus:not(:active)::after {
+    top: 16px;
+}
+
+
+
 .btn-submit {
     padding: 8px;
 
@@ -143,6 +292,41 @@ body {
     background-color: rgba(252, 252, 252, .3);
     border: 2px #ffffff solid;
     background-clip: padding-box;
+}
+
+.btn-submit:hover {
+    background-color: #fcfcfc;
+    border: 2px rgba(252, 252, 252, .3) solid;
+}
+
+.btn-submit:active {
+    padding: 10px;
+
+    background-color: rgba(252, 252, 252, .5);
+    border: none;
+}
+
+.btn-submit:focus:not(:active) {
+    background-color: rgba(252, 252, 252, .5);
+    border-color: #2d3440;
+
+    outline: none;
+}
+
+.btn-submit:disabled {
+    opacity: .4;
+
+    cursor: no-drop;
+}
+
+@keyframes loading {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 /*Header*/
@@ -189,7 +373,23 @@ body {
     line-height: 20px;
     text-decoration: none;
     color: #2d3440;
+
+    border-radius: 30px;
 }
+
+.header-navigation-link:hover {
+    background-color: rgba(252, 252, 252, .5);
+}
+
+.header-navigation-link:active {
+    background-color: #fcfcfc;
+}
+
+.header-navigation-link:focus:not(:active) {
+    outline: 2px #2d3440 solid;
+    background-color: rgba(252, 252, 252, .5);
+}
+
 
 .header-navigation-catalog-link {
     position: relative;
@@ -244,6 +444,21 @@ body {
     border-radius: 30px;
     background-color: rgba(252, 252, 252, .3);
 }
+
+.user-menu-link:hover {
+    background-color: rgba(252, 252, 252, .5);
+}
+
+.user-menu-link:active {
+    background-color: rgba(252, 252, 252, .5);
+    outline: 2px #000000 solid;
+}
+
+.user-menu-link:focus:not(:active) {
+    background-color: #fcfcfc;
+    outline: none;
+}
+
 
 .user-menu-search-link {
     display: block;
@@ -512,6 +727,10 @@ body {
     box-sizing: border-box;
 }
 
+.login-input::placeholder {
+    color: #b9b9b9;
+}
+
 .login-email-input {
     grid-row: 1/2;
     grid-column: 1/3;
@@ -582,6 +801,10 @@ body {
     box-sizing: border-box;
 }
 
+.search-input::placeholder {
+    color: #b9b9b9;
+}
+
 /* Catalog popover */
 
 .header-navigation-item-catalog {
@@ -610,7 +833,6 @@ body {
 }
 
 .popover-catalog-item {
-    padding: 8px 16px;
 
     font-size: 14px;
     line-height: 20px;
@@ -621,8 +843,24 @@ body {
 }
 
 .popover-catalog-link {
+    padding: 8px 16px;
+    display: block;
+
     color: #2d3440;
     text-decoration: none;
+}
+
+.popover-catalog-link:hover {
+    background-color: #ffc8d8;
+}
+
+.popover-catalog-link:active {
+    background-color: #ff7799;
+}
+
+.popover-catalog-link:focus:not(:active) {
+    background-color: #ff2f64;
+    outline: none;
 }
 
 .popover-catalog-divider {
@@ -660,6 +898,10 @@ body {
     line-height: 20px;
     color: #2d3440;
     text-decoration: none;
+}
+
+.breadcrumbs-link:hover {
+    border-bottom: 1px #2d3440 solid;
 }
 
 .breadcrumbs-link-current {
@@ -965,24 +1207,52 @@ body {
 }
 
 .slider-navigation-button {
+    position: relative;
+
     width: 38px;
     height: 38px;
 
     border-radius: 50%;
-    border: 2px #ffffff solid;
+    border: 2px #fcfcfc solid;
     background-color: rgba(252, 252, 252, .3);
-    background-position: center center;
-    background-repeat: no-repeat;
+    /* background-position: center center;
+    background-repeat: no-repeat; */
 
     cursor: pointer;
 }
 
-.slider-button-prev {
-    background-image: url(../images/arrow-left.svg);
+.slider-navigation-button:hover {
+    background-color: #fcfcfc;
 }
 
-.slider-button-next {
-    background-image: url(../images/arrow-right.svg);
+.slider-navigation-button:hover .slider-navigation-icon {
+    fill: #2d3440;
+}
+
+.slider-navigation-button:active {
+    background-color: rgba(252, 252, 252, .5);
+    border-color: rgba(252, 252, 252, .5);
+    background-clip: padding-box;
+}
+
+.slider-navigation-button:focus {
+    border-color: #2d3440;
+    outline: none;
+}
+
+.slider-navigation-button:focus .slider-navigation-icon {
+    fill: #2d3440;
+}
+
+.slider-navigation-icon {
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+
+    fill: #fcfcfc;
 }
 
 
@@ -1075,14 +1345,26 @@ body {
 
     border-radius: 50%;
     border: none;
-    background-color: #fcfcfc;
-    opacity: .3;
+    background-color: rgba(252, 252, 252, .3);
 
     cursor: pointer;
 }
 
+.slider-pagination-button:hover {
+    outline: 1px #fcfcfc solid;
+}
+
+.slider-pagination-button:active {
+    background-color: rgba(252, 252, 252, .5);
+    outline: none;
+}
+
+.slider-pagination-button:focus:not(:active) {
+    outline: 1px #2d3440 solid;
+}
+
 .slider-pagination-button-active {
-    opacity: 1;
+    background-color: #fcfcfc;
 }
 
 .slider-pagination-item:not(:last-child) {
@@ -1110,6 +1392,20 @@ body {
     border-radius: 50%;
     border: 2px rgba(252, 252, 252, .3) solid;
     background-clip: padding-box;
+}
+
+.slider-social-link:hover {
+    background-color: #2d3440;
+}
+
+.slider-social-link:active {
+    background-color: #2d3440;
+    opacity: .5;
+}
+
+.slider-social-link:focus:not(:active) {
+    background-color: #2d3440;
+    border-color: #2d3440;
 }
 
 .slider-social-link-tg {
@@ -1285,6 +1581,51 @@ body {
     border-radius: 50%;
     background-color: #ff2f64;
 }
+
+.popular-taste-link:hover {
+    width: 28px;
+    height: 28px;
+
+    background-color: rgba(252, 252, 252, .3);
+    border: 2px #ff2f64 solid;
+}
+
+.popular-taste-link:hover .popular-taste-icon {
+    fill: #2d3440;
+}
+
+.popular-taste-link:active {
+    width: 28px;
+    height: 28px;
+
+    background-color: #ffc8d8;
+    border: 2px #ff2f64 solid;
+}
+
+.popular-taste-link:active .popular-taste-icon {
+    fill: #2d3440;
+}
+
+.popular-taste-link:focus {
+    width: 28px;
+    height: 28px;
+
+    background-color: #ff2f64;
+    border: 2px #2d3440 solid;
+}
+
+.popular-taste-link:active .popular-taste-icon {
+    fill: #fcfcfc;
+}
+
+.popular-taste-link:disabled {
+    background-color: #b9b9b9;
+}
+
+.popular-taste-link:disabled .popular-taste-icon {
+    fill: #565c66;
+}
+
 
 .popular-taste-icon {
     position: absolute;
@@ -1676,6 +2017,7 @@ body {
 
 .pagination {
     display: flex;
+    flex-wrap: wrap;
     margin: 0;
     padding: 0;
 
@@ -1707,6 +2049,20 @@ body {
     border-radius: 50%;
 
     box-sizing: border-box;
+}
+
+.pagination-link:hover {
+    background-color: rgba(252, 252, 252, .5);
+}
+
+.pagination-link:active {
+    background-color: rgba(252, 252, 252, .5);
+    outline: 1px #fcfcfc solid;
+}
+
+.pagination-link:focus:not(:active) {
+    background-color: rgba(252, 252, 252, .3);
+    outline: 1px #2d3440 solid;
 }
 
 .pagination-link-current {
@@ -1757,6 +2113,20 @@ body {
     border-radius: 50%;
     border: 2px rgba(252, 252, 252, .3) solid;
     background-clip: padding-box;
+}
+
+.footer-social-link:hover {
+    background-color: #2d3440;
+}
+
+.footer-social-link:active {
+    background-color: #2d3440;
+    opacity: .5;
+}
+
+.footer-social-link:focus:not(:active) {
+    background-color: #2d3440;
+    border-color: #2d3440;
 }
 
 .footer-social-link-tg {
